# awelauncher

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  Taskfile.yml  flake.nix  markdownlint.json  prettier.json
docs/: LESSONS.md  PROFILING.md  ROADMAP.md  design-doc.md
docs/rfcs/: 000-design-spec.md  001-man-provider.md  002-journal-provider.md  003-monitor-destinations.md  004-pinned-results-aliases.md  005-smarter-scoring.md  006-xdg-desktop-enhancements.md  007-service-mode.md  007-xdg-categories.md  008-context-actions.md  009-clipboard-provider.md  010-calculator-provider.md  011-awelaunchctl.md  012-provider-sets.md  013-utility-providers.md  014-visual-polish.md
docs/specs/: provider_sets_rfc.md  utility_providers_rfc.md  visual_polish_rfc.md
examples/: awelaunch.desktop
examples/config/: README.md  config.yaml
examples/config/themes/: catppuccin.yaml  default.yaml  test-blue.yaml  test-red.yaml
src/: main.cpp
src/App/controllers/: DaemonController.cpp  DaemonController.h  LauncherController.cpp  LauncherController.h
src/App/models/: LauncherModel.cpp  LauncherModel.h
src/App/providers/: DesktopFileLoader.cpp  DesktopFileLoader.h  DesktopProvider.cpp  DesktopProvider.h  IconProvider.cpp  IconProvider.h  PathProvider.cpp  PathProvider.h  ProcessProvider.cpp  ProcessProvider.h  SSHProvider.cpp  SSHProvider.h  StdinProvider.cpp  StdinProvider.h  WindowProvider.cpp  WindowProvider.h
src/App/utils/: Config.cpp  Config.h  Constants.h  FilterUtils.cpp  FilterUtils.h  FuzzyMatcher.cpp  FuzzyMatcher.h  MRUTracker.cpp  MRUTracker.h  OutputUtils.cpp  OutputUtils.h  Profiler.h  TerminalUtils.cpp  TerminalUtils.h  Theme.cpp  Theme.h  ThemeScanner.cpp  ThemeScanner.h
src/qml/: Footer.qml  HelpOverlay.qml  LauncherRoot.qml  OutputSelector.qml  ResultRow.qml  SearchBar.qml
tests/: CMakeLists.txt  test_fuzzy.cpp  test_theme.cpp  tst_main.cpp
tests/e2e/: run_headless.sh  run_margin.sh
tests/qml/: tst_SearchBar.qml
tools/: bump_version.sh  verify_release.sh
